Fixed bug #70215 (segfault when __invoke is static)